# conflux

./: .gitignore  README.md  index.html
.agent/rules/: code-style-guide.md
.github/: FUNDING.yml
.tanstack/tmp/: afc257c5-204558438dca0445492602cd1688a00f
backend/: .env.example  README.md  RUNNING.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: initial_rev_initial_migration.py
backend/app/: main.py
backend/app/api/v1/endpoints/: sequin.py  sequin_databases.py  settings.py
backend/app/core/: config.py  database.py  db_migrations.py
backend/app/models/: sequin_database.py  settings.py
backend/app/schemas/: sequin_database.py
backend/app/services/: sequin.py
backend/tests/: test_sequin.py  test_settings.py
docker_engine/: .gitignore  README.md  STEP.md  copy_file_kafka.sh  dashboard.json  docker-compose.yml  grafana_dashboard.yml  grafana_datasource.yml  playground.yml  prometheus.yml  query_snowflake.sql
src/: routeTree.gen.ts
src/assets/: logo.tsx
src/components/layout/: app-title.tsx
src/components/layout/data/: sidebar-data.ts
src/features/auth/: auth-layout.tsx
src/features/auth/sign-in/: sign-in-2.tsx
src/features/dashboard/: index.tsx
src/features/dashboard/components/: KafkaStatusCard.tsx  SequinStatusCard.tsx
src/features/kafka/components/: KafkaSettingsForm.tsx
src/features/sequin/api/: databases.ts  sequin.ts  (+1 more)
src/features/settings/: index.tsx
src/routes/_authenticated/: backfills.lazy.tsx  sequin-databases.lazy.tsx  sequin-settings.lazy.tsx  sinks.lazy.tsx
(+15 files in other folders)
